Redesign profile_card_view
*refactored profile_card_view, now includes maintenance due indicator as well.
* TODO: found sqlite issue when choosing image from gallery. Need to save image path in db instead of image blob.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.slack.motometer">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -10,18 +11,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/theme_test">
-        <activity android:name=".ui.activities.EditTask" />
-        <activity android:name=".ui.activities.EditProfile" />
-        <activity android:name=".ui.activities.NewChecklistItem" />
-        <activity android:name=".ui.activities.Notes" />
-        <activity android:name=".ui.activities.PreRide" />
-        <activity android:name=".ui.activities.PostRide" />
-        <activity android:name=".ui.activities.ProfileOverview" />
-        <activity android:name=".ui.activities.NewTask" />
-        <activity android:name=".ui.activities.TaskSignOff" />
-        <activity android:name=".ui.activities.NewProfile" />
-        <activity android:name=".ui.activities.TasksOverview" />
-        <activity android:name=".ui.activities.MainActivity">
+        <activity android:name=".ui.activities.EditTask"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.EditProfile"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.NewChecklistItem"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.Notes"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.PreRide"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.PostRide"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.ProfileOverview"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.NewTask"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.TaskSignOff"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.NewProfile"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.TasksOverview"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".ui.activities.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
